# pqc-mqtt-v1

./: .gitignore  CMakeLists.txt  README.md  run.sh
broker/: mosquitto-classical.conf  mosquitto-ecdsa.conf  mosquitto-pqc.conf  start-broker.sh  stop-broker.sh
docs/: architecture.md  references.bib
eval/analysis/: compute_statistics.py  generate_plots.py  requirements.txt
eval/capture/: capture-handshake.sh
pki/: generate-classical-certs.sh  generate-pqc-certs.sh  openssl-classical.cnf  openssl-pqc.cnf
src/bench/: cert_bench.c  handshake_bench.c  payload_sweep_bench.c  qos_bench.c  stress_test.c  throughput_bench.c
src/include/: csv_logger.h  pqc_mqtt_common.h  timing_utils.h  tls_config.h
src/lib/: csv_logger.c  timing_utils.c  tls_config.c
src/publisher/: pqc_publisher.c
src/subscriber/: pqc_subscriber.c
toolchain/: build-liboqs.sh  build-mosquitto.sh  build-openssl.sh  build-oqs-provider.sh  build-paho-mqtt.sh  env.sh  install-deps.sh
